--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tp2",
+  "name": "Pizza",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -21,8 +21,13 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@webcomponents/custom-elements": "^1.0.0",
+    "clarity-angular": "^0.10.12",
+    "clarity-icons": "^0.10.12",
+    "clarity-ui": "^0.10.12",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
+    "socket.io-client": "^2.0.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
